# google-sheets-mcp-server

./: .gitignore  CLAUDE.md  LICENSE  PR_DRAFT.md  README.md  TEST_PROTOCOLS.md  __init__.py  demo_append_rows.py  google_sheets.py  mcp_config.json  pyproject.toml  test_fixes.py  test_mcp_integration.py  test_mcp_protocol.py  test_strategy.md  validate_production_readiness.py
.claude/: settings.local.json
docs/: get_values_feature.md
tests/: test_append_rows.py  test_e2e_append_rows.py  test_e2e_get_values.py  test_e2e_insert_rows.py  test_e2e_read_range.py  test_e2e_update_range.py  test_get_values.py  test_get_values_simple.py  test_google_sheets.py  test_insert_rows.py  test_read_range.py  test_update_range.py
