[project]
name = "google-sheets-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Google Sheets"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.4.1",
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "google-api-python-client>=2.97.0",
    "google-auth>=2.22.0",
    "google-auth-oauthlib>=1.0.0",
    "pydantic>=2.7.2",
    "pydantic-settings>=2.5.2",
    "tenacity>=8.2.3",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "email-validator>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"] 